# dynamics

./: .gitignore  .gitmodules  CMakeLists.txt  README.rst
inc/: errors.h
inc/data_structures/: matrix.h  vector.h
inc/filtering/: kalman.h
inc/integrators/: integrator.h
inc/linear_algebra/: decompositions.h  properties.h
src/: CMakeLists.txt
src/data_structures/: CMakeLists.txt  matrix.c  vector.c
src/filtering/: CMakeLists.txt  kalman.c
src/linear_algebra/: CMakeLists.txt  decompositions.c  properties.c
tests/: CMakeLists.txt  test.c  test.h  vector.c
tests/data_structures/: vector.c
tests/filtering/: kalman.c
tests/linear_algebra/: decompositions.c
